--- a/sg-stock-price/src/main/resources/application.properties
+++ b/sg-stock-price/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
